Update 'kq4xee6mb-dotnet-basic' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-8d58428d23.v2cn.p3.openshiftapps.com/rhtap/rhtap-qe:c0692ec818a8d5aa5269131734684b65104ef878@sha256:f3b28190e99267841fe514613366313d893217a88a036ab9be7c9423333e6f2e

--- a/components/kq4xee6mb-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/kq4xee6mb-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: kq4xee6mb-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-8d58428d23.v2cn.p3.openshiftapps.com/rhtap/rhtap-qe:c0692ec818a8d5aa5269131734684b65104ef878@sha256:f3b28190e99267841fe514613366313d893217a88a036ab9be7c9423333e6f2e
+          name: container-image
